@@ -862,6 +862,24 @@ describe 'Asciidoctor::PDF::Converter - Running Content' do
       end
     end
 
+    it 'should start page numbering and running content on page before first chapter in prepress book if start-at is 0' do
+      pdf = to_pdf <<~'EOS', enable_footer: true, pdf_theme: { page_numbering_start_at: 0, running_content_start_at: 0 }, analyze: true
+      = Book Title
+      :doctype: book
+      :media: prepress
+
+      == Chapter One
+
+      content
+      EOS
+
+      (expect pdf.pages).to have_size 3
+      pgnum_labels = (1.upto pdf.pages.size).each_with_object [] do |page_number, accum|
+        accum << ((pdf.find_text page_number: page_number, y: 14.263)[-1] || {})[:string]
+      end
+      (expect pgnum_labels).to eql [nil, '1', '2']
+    end
+
     it 'should start page numbering and running content at specified page of body' do
       pdf = to_pdf <<~'EOS', enable_footer: true, pdf_theme: { page_numbering_start_at: 3, running_content_start_at: 3 }, analyze: true
       = Book Title
